Remove duplicate section.

--- a/.ssh/config
+++ b/.ssh/config
@@ -2,10 +2,10 @@
 # silently ignored.
 Include config.d/*
 
-Host *
-  ForwardAgent yes
-  ServerAliveInterval 5
-  GSSAPIAuthentication yes
-  PreferredAuthentications gssapi-with-mic,publickey,keyboard-interactive,password
-  ControlMaster auto
-  ControlPath ~/.ssh/master-%r@%h:%p
+# Host *
+#   ForwardAgent yes
+#   ServerAliveInterval 5
+#   GSSAPIAuthentication yes
+#   PreferredAuthentications gssapi-with-mic,publickey,keyboard-interactive,password
+#   ControlMaster auto
+#   ControlPath ~/.ssh/master-%r@%h:%p
