Remove top-level Host section.

--- a/.ssh/config
+++ b/.ssh/config
@@ -2,24 +2,15 @@
 # silently ignored.
 Include config.d/*
 
-Host *
-  ForwardAgent yes
-  ServerAliveInterval 5
-  GSSAPIAuthentication yes
-  PreferredAuthentications gssapi-with-mic,publickey,keyboard-interactive,password
-  ControlMaster auto
-  ControlPersist 30s
-  ControlPath ~/.ssh/master-%r@%h:%p
-
 # Automaticlaly select the correct opensc library.
 # https://www.nsls2.bnl.gov/docs/how-to/opensc.html
 
-Match Host * exec "bash -c '[[ `sed -n '/ID/p' /etc/os-release` == *debian* ]]' 2> /dev/null"
-  PKCS11Provider /usr/lib/x86_64-linux-gnu/opensc-pkcs11.so
-
-Match Host * exec "bash -c '[[ `sed -n '/ID_LIKE/p' /etc/os-release` == *fedora* ]]' 2> /dev/null"
-  PKCS11Provider /usr/lib64/pkcs11/opensc-pkcs11.so
-
-Match Host * exec "bash -c '[[ $OSTYPE == darwin* ]]'"
-  PKCS11Provider /usr/local/lib/opensc-pkcs11.so
-
+# Match Host * exec "bash -c '[[ `sed -n '/ID/p' /etc/os-release` == *debian* ]]' 2> /dev/null"
+#   PKCS11Provider /usr/lib/x86_64-linux-gnu/opensc-pkcs11.so
+# 
+# Match Host * exec "bash -c '[[ `sed -n '/ID_LIKE/p' /etc/os-release` == *fedora* ]]' 2> /dev/null"
+#   PKCS11Provider /usr/lib64/pkcs11/opensc-pkcs11.so
+# 
+# Match Host * exec "bash -c '[[ $OSTYPE == darwin* ]]'"
+#   PKCS11Provider /usr/local/lib/opensc-pkcs11.so
+# 
