--- a/.pixi/manifests/pixi-global.toml
+++ b/.pixi/manifests/pixi-global.toml
@@ -127,3 +127,8 @@ exposed = { corepack = "corepack", node = "node", npm = "npm", npx = "npx" }
 channels = ["conda-forge"]
 dependencies = { shellcheck = "*" }
 exposed = { shellcheck = "shellcheck" }
+
+[envs.pre-commit]
+channels = ["conda-forge"]
+dependencies = { pre-commit = "*" }
+exposed = { pre-commit = "pre-commit" }
