Make init script idempotent.

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,6 +1,7 @@
 # The include directive must be the at the top of the file, or it will be
 # silently ignored.
 Include config.d/*
+Include nsls2.config
 
 # Automaticlaly select the correct opensc library.
 # https://www.nsls2.bnl.gov/docs/how-to/opensc.html
